syntax = "proto3";

package common.domain;

import "scalapb/scalapb.proto";
import "validate/validate.proto";

option java_package = "com.example.common.domain";

message PhoneNumber {
    string country_code = 1 [(validate.rules).string.pattern = "^[0-9]{1}$"];
    string area_code = 2 [(validate.rules).string.pattern = "^[0-9]{3}$"];
    string personal_number = 3 [(validate.rules).string.pattern = "^[0-9]{7}$"];
}

// Either a USA or Canadian postal code
message PostalCode {
    option (scalapb.message).type = "com.example.common.domain.PostalCodeMessageImpl";
    oneof postal_code_value {
        // A USA postal code
        string ca_postal_code_message = 1 [(validate.rules).string.min_len = 1];
        // A Canadian postal code
        string us_postal_code_message = 2 [(validate.rules).string.min_len = 1];
    }
}

// A generalized north american postal address
message Address {
    string line1 = 1 [(validate.rules).string.min_len = 1];
    optional string line2 = 2 [(validate.rules).string.min_len = 1];
    string city = 3 [(validate.rules).string.min_len = 1];
    string state_province = 4 [(validate.rules).string.min_len = 1];
    string country = 5 [(validate.rules).string.min_len = 1];
    PostalCode postal_code = 6;
}

message EditableAddress {
    optional string line1 = 1 [(validate.rules).string.min_len = 1];
    optional string line2 = 2 [(validate.rules).string.min_len = 1];
    optional string city = 3 [(validate.rules).string.min_len = 1];
    optional string state_province = 4 [(validate.rules).string.min_len = 1];
    optional string country = 5 [(validate.rules).string.min_len = 1];
    optional PostalCode postal_code = 6;
}
